test/negative/NativeBody.java
public class AbstractBody {
    public static native void f() {
    }
}
